fix(tradebot): :globe_with_meridians: add trade condition query api, separate get simulate best cond
